--- a/SamiiProjectOptimal/SamiiProjectOptimal.csproj
+++ b/SamiiProjectOptimal/SamiiProjectOptimal.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.17.1" />
     <PackageReference Include="DotNetSeleniumExtras.PageObjects.Core" Version="4.0.1" />
     <PackageReference Include="Microsoft.ApplicationInsights" Version="2.20.0" />
